[gd_scene load_steps=2 format=3 uid="uid://c3va7qvlw42xj"]

[ext_resource type="Script" path="res://options.gd" id="1_oljdc"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oljdc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 300.0
offset_top = 300.0
offset_right = 600.0
offset_bottom = 382.0

[node name="Options" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Options"
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Music Vol."

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fx Vol."

[node name="FxVolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Autosave" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Autosave"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
;Copyright 2023 Tino Schnittke
;
;Licensed under the Apache License, Version 2.0 (the "License");
;you may not use this file except in compliance with the License.
;You may obtain a copy of the License at
;
;    http://www.apache.org/licenses/LICENSE-2.0
;
;Unless required by applicable law or agreed to in writing, software
;distributed under the License is distributed on an "AS IS" BASIS,
;WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
;See the License for the specific language governing permissions and
;limitations under the License.

text = "Difficulty:"

[node name="Difficulty" type="MenuBar" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Difficulty" type="PopupMenu" parent="VBoxContainer/HBoxContainer/Difficulty"]
item_count = 3
item_0/text = "EASY"
item_0/id = 0
item_1/text = "MEDIUM"
item_1/id = 1
item_2/text = "HARD"
item_2/id = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/FxVolume" to="." method="_on_fx_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/Autosave" to="." method="_on_autosave_toggled"]
[connection signal="index_pressed" from="VBoxContainer/HBoxContainer/Difficulty/Difficulty" to="." method="_on_difficulty_index_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
